implement update (#81)
* implement update

* minor update

* minor update

* minor update

* minor update
